syntax = "proto3";
option go_package = ".;protos";
package protos;

message UserMessage {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string about = 5;
  string avatar = 6;
  string created_at = 7;
  string updated_at = 8;
}

message GetUserRequest {
  int32 id = 1;
}
message GetUserResponse {
  UserMessage data = 1;
}

message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string about = 5;
}
message UpdateUserResponse {
  UserMessage data = 1;
}

message UploadUserAvatarRequest {
  int32 id = 1;
  bytes image = 2;
}
message UploadUserAvatarResponse {
  string url = 1;
}